Update ShellCommander.java